# groundgrid

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  nodelet_plugins.xml  package.xml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
cfg/: GroundGrid.cfg
include/groundgrid/: GroundGrid.h  GroundGrid.hpp  GroundGridFwd.h  GroundSegmentation.h  GroundSegmentation.hpp
include/velodyne_pointcloud/: point_types.h
launch/: GroundGrid.launch  GroundGrid.launch.py  HeLiPRPlayback.launch.py  KITTIEvaluate.launch  KITTIEvaluate.launch.py  KITTIPlayback.launch  Live.launch.py
param/: groundgrid.rviz  helipr_aeva.yaml  helipr_avia.yaml  helipr_ouster.yaml  helipr_velodyne.yaml  mulran.yaml
rviz/: groundgrid.rviz
scripts/: eval_groundpoint_classifier.py  kitti_data_publisher.py
src/: GroundGrid.cpp  GroundGridNode.cpp  GroundGridNodelet.cpp  GroundSegmentation.cpp
